# pytorch

./: BUILD.bazel  CMakeLists.txt  build_variables.bzl  setup.py
c10/core/: Device.h  DeviceType.h  ScalarType.cpp  ScalarType.h
c10/core/impl/: SizesAndStrides.cpp  SizesAndStrides.h
c10/macros/: Macros.h
c10/util/: Exception.h  StringUtil.h
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake
test/cpp/aoti_abi_check/: CMakeLists.txt  test_core.cpp  test_macros.cpp
test/cpp/aoti_standalone/: CMakeLists.txt  test_pad.cpp  test_reshape.cpp  test_resize.cpp  test_scalar_tensor.cpp  test_slim_tensor.cpp  test_transpose_int.cpp
test/inductor/: test_aot_inductor.py  test_aot_inductor_libtorch_free.py  test_aot_inductor_standalone.py  test_aot_inductor_utils.py
torch/: header_only_apis.txt
torch/_inductor/: codecache.py  compile_fx.py  config.py  cpp_builder.py
torch/_inductor/codegen/: cpp_prefix.h  cpp_template.py  cpp_wrapper_cpu.py  cpp_wrapper_gpu.py
torch/_inductor/package/: package.py
torch/csrc/inductor/: cpp_prefix.h
torch/standalone/: pad_template.h  reshape_template.h  resize_template.h  scalar_tensor_template.h  transpose_int_template.h
torch/standalone/core/: Device.h  DeviceType.h  ScalarType.h
torch/standalone/cpu/: hann_window_template.h
torch/standalone/cuda/: _weight_int4pack_mm.cuh  permute_template.h
torch/standalone/macros/: Export.h  Macros.h
torch/standalone/slim_tensor/: array_ref.h  slim_tensor.h  storage.h  utils.h
torch/standalone/util/: Exception.h  Factory.h  ReshapeUtils.h  (+1 more)
torchgen/aoti/: fallback_ops.py
(+115 files in other folders)
